# SAFEGUARD-ENV

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  app.py  benchmark.py  client.py  deploy_to_hf.py  env.py  inference.py  main.py  models.py  openenv.yaml  push_error.txt  push_error_utf8.txt  pyproject.toml  requirements.txt  run_demo.ps1  run_demo.sh  simple_eval.py  uvicorn_err.txt  uvicorn_out.txt
backend/: __init__.py  api.py  models.py  storage.py
demo/: README.md  app.py  requirements.txt
docs/: architecture.md  features.md  security.md
encryption/: crypto.py
frontend/: README.md  index.html
legacy/: env.py  inference.py  models.py  simple_eval.py
legacy/security/: crypto.py
legacy/server/: Dockerfile  __init__.py
server/: app.py  pyproject.toml  requirements.txt  safeguard_environment.py
