[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safeguard-env"
version = "2.5.0"
description = "Zero-Knowledge Data Compliance Environment for evaluating AI agents on API Key & PII redaction with AES-256-GCM cryptography."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
safeguard-env = "main:app"

[tool.setuptools.packages.find]
where = ["."]
