[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safeguard-env"
version = "2.5.0"
description = "Zero-Knowledge Data Compliance Environment for evaluating AI agents on API Key & PII redaction with AES-256-GCM cryptography."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
urls = {"Source" = "https://github.com/bhaveshdamani5-crypto/SAFEGUARD-ENV", "Hugging Face" = "https://huggingface.co/spaces/bhavesh657/SafeGuard-Env"}
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
    "requests>=2.25.0",
]

[project.scripts]
safeguard-env = "server.app:app"
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
