[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safeguard-env"
version = "3.0.0"
description = "Secure environment variable vault with AES-256 encryption, token sharing, role access, and leak detection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
urls = {"Source" = "https://github.com/bhaveshdamani5-crypto/SAFEGUARD-ENV", "Hugging Face" = "https://huggingface.co/spaces/bhavesh657/SafeGuard-Env"}
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "cryptography>=41.0.0",
    "pydantic>=2.6.0",
    "gradio>=3.70",
    "python-multipart>=0.0.6",
    "requests>=2.28.0",
    "huggingface-hub>=0.16.0",
]

[project.scripts]
serve = "backend.api:app"

[tool.setuptools.packages.find]
where = ["."]
